canary/virtual-service.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: todo-prod
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - todo.mattel-west.gsolo.net
    routes:
    - matchers:
      - prefix: /v1
      routeAction:
        single:
          upstream:
            name: todo-todo-v1-8080
            namespace: gloo-system
    - matchers:
      - prefix: /v2
      routeAction:
        single:
          upstream:
            name: todo-todo-v2-8080
            namespace: gloo-system
    - matchers:
      - prefix: /
      routeAction:
        upstreamGroup:
          name: todo-service-group
          namespace: gloo-system
